reduced logo's top padding and removed body's min-width. Now it should be no longer zoomed in on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 }
 
 body{
-	min-width: 511px;
 	background-color:#DDCAD9;
 }
 
@@ -58,7 +57,7 @@ header {
 
 #logo{
 	text-align: center;
-	padding-top: 75px;
+	padding-top: 25px;
 	padding-bottom: 10px;
 	background-color: gainsboro;
 }
